worker-manager だと npm に publish 出来ないので、パッケージ名を @kdjn/worker-manager に変更してみた。

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "worker-manager",
+  "name": "@kdjn/worker-manager",
   "version": "0.0.1",
   "description": "Workerを扱うライブラリをテスト的に作成",
   "main": "WorkerManager.js",
